// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component should render a Navbar component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    build="V1"
    isNavigationShown={true}
    links={
        Array [
            Object {
              "name": "test1",
              "path": "/test1",
            },
            Object {
              "name": "test2",
              "path": "/test2",
            },
          ]
    }
    toggleNavigation={[Function]}
    version="1.0.0"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ul
          className="nav nav-pills flex-column"
>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test1"
                    >
                              test1
                    </Link>
          </li>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test2"
                    >
                              test2
                    </Link>
          </li>
</ul>,
        <div
          className="versioning nav flex-column"
>
          <span
                    className="nav-item version-platform"
          >
                    Frontend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: undefined
          </span>
          <span
                    className="nav-item version-platform"
          >
                    Backend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: V1
          </span>
</div>,
      ],
      "className": " col-sm-3 col-md-2 bg-light sidebar",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test1"
              >
                            test1
              </Link>
</li>,
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test2"
              >
                            test2
              </Link>
</li>,
          ],
          "className": "nav nav-pills flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "test1",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test1"
>
                test1
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test1",
                "className": "nav-link ",
                "replace": false,
                "to": "/test1",
              },
              "ref": null,
              "rendered": "test1",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "test2",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test2"
>
                test2
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test2",
                "className": "nav-link ",
                "replace": false,
                "to": "/test2",
              },
              "ref": null,
              "rendered": "test2",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="nav-item version-platform"
>
              Frontend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: undefined
</span>,
            <span
              className="nav-item version-platform"
>
              Backend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: V1
</span>,
          ],
          "className": "versioning nav flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Frontend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Frontend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: undefined",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: undefined",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Backend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Backend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: V1",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: V1",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "aside",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ul
            className="nav nav-pills flex-column"
>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test1"
                        >
                                    test1
                        </Link>
            </li>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test2"
                        >
                                    test2
                        </Link>
            </li>
</ul>,
          <div
            className="versioning nav flex-column"
>
            <span
                        className="nav-item version-platform"
            >
                        Frontend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: undefined
            </span>
            <span
                        className="nav-item version-platform"
            >
                        Backend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: V1
            </span>
</div>,
        ],
        "className": " col-sm-3 col-md-2 bg-light sidebar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test1"
                >
                                test1
                </Link>
</li>,
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test2"
                >
                                test2
                </Link>
</li>,
            ],
            "className": "nav nav-pills flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "test1",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test1"
>
                  test1
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test1",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test1",
                },
                "ref": null,
                "rendered": "test1",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "test2",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test2"
>
                  test2
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test2",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test2",
                },
                "ref": null,
                "rendered": "test2",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="nav-item version-platform"
>
                Frontend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: undefined
</span>,
              <span
                className="nav-item version-platform"
>
                Backend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: V1
</span>,
            ],
            "className": "versioning nav flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Frontend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Frontend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: undefined",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: undefined",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Backend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Backend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: V1",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: V1",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "aside",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Component should render a Navbar component with navigation shown 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    build="V1"
    isNavigationShown={true}
    links={
        Array [
            Object {
              "name": "test1",
              "path": "/test1",
            },
            Object {
              "name": "test2",
              "path": "/test2",
            },
          ]
    }
    toggleNavigation={[Function]}
    version="1.0.0"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ul
          className="nav nav-pills flex-column"
>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test1"
                    >
                              test1
                    </Link>
          </li>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test2"
                    >
                              test2
                    </Link>
          </li>
</ul>,
        <div
          className="versioning nav flex-column"
>
          <span
                    className="nav-item version-platform"
          >
                    Frontend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: undefined
          </span>
          <span
                    className="nav-item version-platform"
          >
                    Backend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: V1
          </span>
</div>,
      ],
      "className": " col-sm-3 col-md-2 bg-light sidebar",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test1"
              >
                            test1
              </Link>
</li>,
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test2"
              >
                            test2
              </Link>
</li>,
          ],
          "className": "nav nav-pills flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "test1",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test1"
>
                test1
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test1",
                "className": "nav-link ",
                "replace": false,
                "to": "/test1",
              },
              "ref": null,
              "rendered": "test1",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "test2",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test2"
>
                test2
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test2",
                "className": "nav-link ",
                "replace": false,
                "to": "/test2",
              },
              "ref": null,
              "rendered": "test2",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="nav-item version-platform"
>
              Frontend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: undefined
</span>,
            <span
              className="nav-item version-platform"
>
              Backend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: V1
</span>,
          ],
          "className": "versioning nav flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Frontend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Frontend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: undefined",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: undefined",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Backend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Backend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: V1",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: V1",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "aside",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ul
            className="nav nav-pills flex-column"
>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test1"
                        >
                                    test1
                        </Link>
            </li>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test2"
                        >
                                    test2
                        </Link>
            </li>
</ul>,
          <div
            className="versioning nav flex-column"
>
            <span
                        className="nav-item version-platform"
            >
                        Frontend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: undefined
            </span>
            <span
                        className="nav-item version-platform"
            >
                        Backend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: V1
            </span>
</div>,
        ],
        "className": " col-sm-3 col-md-2 bg-light sidebar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test1"
                >
                                test1
                </Link>
</li>,
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test2"
                >
                                test2
                </Link>
</li>,
            ],
            "className": "nav nav-pills flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "test1",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test1"
>
                  test1
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test1",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test1",
                },
                "ref": null,
                "rendered": "test1",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "test2",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test2"
>
                  test2
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test2",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test2",
                },
                "ref": null,
                "rendered": "test2",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="nav-item version-platform"
>
                Frontend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: undefined
</span>,
              <span
                className="nav-item version-platform"
>
                Backend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: V1
</span>,
            ],
            "className": "versioning nav flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Frontend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Frontend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: undefined",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: undefined",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Backend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Backend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: V1",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: V1",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "aside",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar Component should render a hidden Navbar component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    build="V1"
    isNavigationShown={false}
    links={
        Array [
            Object {
              "name": "test1",
              "path": "/test1",
            },
            Object {
              "name": "test2",
              "path": "/test2",
            },
          ]
    }
    toggleNavigation={[Function]}
    version="1.0.0"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ul
          className="nav nav-pills flex-column"
>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test1"
                    >
                              test1
                    </Link>
          </li>
          <li
                    className="nav-item"
                    onClick={[Function]}
          >
                    <Link
                              className="nav-link "
                              replace={false}
                              to="/test2"
                    >
                              test2
                    </Link>
          </li>
</ul>,
        <div
          className="versioning nav flex-column"
>
          <span
                    className="nav-item version-platform"
          >
                    Frontend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: undefined
          </span>
          <span
                    className="nav-item version-platform"
          >
                    Backend
          </span>
          <span
                    className="nav-item"
          >
                    Version: 1.0.0
          </span>
          <span
                    className="nav-item"
          >
                    Build: V1
          </span>
</div>,
      ],
      "className": "d-none d-sm-block col-sm-3 col-md-2 bg-light sidebar",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test1"
              >
                            test1
              </Link>
</li>,
            <li
              className="nav-item"
              onClick={[Function]}
>
              <Link
                            className="nav-link "
                            replace={false}
                            to="/test2"
              >
                            test2
              </Link>
</li>,
          ],
          "className": "nav nav-pills flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "test1",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test1"
>
                test1
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test1",
                "className": "nav-link ",
                "replace": false,
                "to": "/test1",
              },
              "ref": null,
              "rendered": "test1",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "test2",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="nav-link "
                replace={false}
                to="/test2"
>
                test2
</Link>,
              "className": "nav-item",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test2",
                "className": "nav-link ",
                "replace": false,
                "to": "/test2",
              },
              "ref": null,
              "rendered": "test2",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="nav-item version-platform"
>
              Frontend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: undefined
</span>,
            <span
              className="nav-item version-platform"
>
              Backend
</span>,
            <span
              className="nav-item"
>
              Version: 1.0.0
</span>,
            <span
              className="nav-item"
>
              Build: V1
</span>,
          ],
          "className": "versioning nav flex-column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Frontend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Frontend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: undefined",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: undefined",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Backend",
              "className": "nav-item version-platform",
            },
            "ref": null,
            "rendered": "Backend",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Version: 1.0.0",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Version: 1.0.0",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Build: V1",
              "className": "nav-item",
            },
            "ref": null,
            "rendered": "Build: V1",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "aside",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ul
            className="nav nav-pills flex-column"
>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test1"
                        >
                                    test1
                        </Link>
            </li>
            <li
                        className="nav-item"
                        onClick={[Function]}
            >
                        <Link
                                    className="nav-link "
                                    replace={false}
                                    to="/test2"
                        >
                                    test2
                        </Link>
            </li>
</ul>,
          <div
            className="versioning nav flex-column"
>
            <span
                        className="nav-item version-platform"
            >
                        Frontend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: undefined
            </span>
            <span
                        className="nav-item version-platform"
            >
                        Backend
            </span>
            <span
                        className="nav-item"
            >
                        Version: 1.0.0
            </span>
            <span
                        className="nav-item"
            >
                        Build: V1
            </span>
</div>,
        ],
        "className": "d-none d-sm-block col-sm-3 col-md-2 bg-light sidebar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test1"
                >
                                test1
                </Link>
</li>,
              <li
                className="nav-item"
                onClick={[Function]}
>
                <Link
                                className="nav-link "
                                replace={false}
                                to="/test2"
                >
                                test2
                </Link>
</li>,
            ],
            "className": "nav nav-pills flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "test1",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test1"
>
                  test1
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test1",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test1",
                },
                "ref": null,
                "rendered": "test1",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "test2",
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="nav-link "
                  replace={false}
                  to="/test2"
>
                  test2
</Link>,
                "className": "nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "test2",
                  "className": "nav-link ",
                  "replace": false,
                  "to": "/test2",
                },
                "ref": null,
                "rendered": "test2",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="nav-item version-platform"
>
                Frontend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: undefined
</span>,
              <span
                className="nav-item version-platform"
>
                Backend
</span>,
              <span
                className="nav-item"
>
                Version: 1.0.0
</span>,
              <span
                className="nav-item"
>
                Build: V1
</span>,
            ],
            "className": "versioning nav flex-column",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Frontend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Frontend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: undefined",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: undefined",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Backend",
                "className": "nav-item version-platform",
              },
              "ref": null,
              "rendered": "Backend",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Version: 1.0.0",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Version: 1.0.0",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Build: V1",
                "className": "nav-item",
              },
              "ref": null,
              "rendered": "Build: V1",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "aside",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
